# arakis

./: .dockerignore  .env.example  .gitignore  API_CALL_SUMMARY.md  CHANGELOG.md  CICD_GUIDE.md  CLAUDE.md  DATABASE_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  EXAMPLES.md  EXTRACTION_DEBUG_REPORT.md  MANUSCRIPT_TEMPLATE.md  PHASE_2_COMPLETE.md  PHASE_4_COMPLETE.md  PRD_COST_OPTIMIZATION.md  RATE_LIMIT_HANDLING.md  README.md  WORKFLOW_GUIDE.md  alembic.ini  debug_perplexity.py  demo_systematic_review.py  docker-compose.prod.yml  docker-compose.yml  extractions.json  pedagogical_agents_results.json  prd.md  progress.txt  progress_cost_optimization.txt  pyproject.toml  requirements-api.txt  requirements.txt  screening_results.json  screening_with_papers.json  search_results.json  test_full_pipeline_e2e.py  test_screening_integration.py
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  docker-build.yml  frontend-ci.yml
data/: README.md
deploy/: README.md  arakis.service  backup.sh  health_check.sh  nginx.conf  setup_vm.sh
docs/: CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md
docs/api/: API_REFERENCE.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md
docs/development/: PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_5_COMPLETE.md
docs/guides/: PAPER_FULL_TEXT_EXTRACTION.md  QUICK_START.md
examples/: README.md  demo_human_review.py
frontend/: README.md  index.html
frontend-next/: ARCHITECTURE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  wrangler.toml
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/hooks/: index.ts  useAuth.ts  useManuscript.ts  useNotifications.ts  usePolling.ts  useWorkflow.ts
frontend-next/src/store/: index.ts
frontend-next/src/types/: auth.ts  chat.ts  index.ts  manuscript.ts  workflow.ts
remotion-video/: package-lock.json  package.json  tsconfig.json
remotion-video/src/: ArakisWorkflow.tsx  Root.tsx
remotion-video/src/components/: ChatScene.tsx  IntroScene.tsx  OutputScene.tsx  OutroScene.tsx  WorkflowScene.tsx  index.ts
remotion-video/src/mobile/: MobileChatScene.tsx  MobileCompositions.tsx  MobileIntroScene.tsx  MobileOutputScene.tsx  MobileOutroScene.tsx  MobileVariations.tsx  MobileWorkflowScene.tsx
remotion-video/src/variations/: AcademicVideo.tsx  CostEffectiveVideo.tsx  TimeSaverVideo.tsx
scripts/: README.md  deploy.sh  rollback.sh
src/arakis/: __init__.py  cli.py  config.py  deduplication.py  logging.py  orchestrator.py  traceability.py  utils.py
src/arakis/agents/: __init__.py  abstract_writer.py  discussion_writer.py  extractor.py  intro_writer.py  methods_writer.py  models.py  query_generator.py  results_writer.py  screener.py
src/arakis/analysis/: __init__.py  engine.py  grade.py  meta_analysis.py  recommender.py  (+3 more)
tests/: test_auth.py  test_cli_workflow.py  test_extraction.py  test_intro_discussion.py  test_perplexity.py  test_rag.py  test_references.py  test_workflow_e2e.py  test_workflow_orchestrator.py  test_workflow_stages.py
(+164 files in other folders)
